# nifi-flow-upgrade-advisor

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  go.mod  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: actionlint.yaml  ci.yaml  dependabot-policy.yaml  dependency-review.yaml  desktop-tauri.yaml  govulncheck.yaml  main-push-policy.yaml  pages.yaml  pr-summary-comment.yaml  release.yaml
cmd/nifi-flow-upgrade/: main.go
demo/: README.md  _lib.sh  all.sh  asana-2.7-to-2.8.sh  base64-1.27-to-2.0.sh  bridge-upgrade-1.21-to-2.0.sh  content-viewer-2.4-to-2.5.sh  convert-avro-1.25-to-1.26.sh  edge-ingest-2.3-to-2.4.sh  get-http-1.27-to-2.0.sh  h2-dbcp-1.21-to-1.22.sh  integration-platform-1.22-to-1.23.sh  invoke-http-url-encoding-1.23-to-1.24.sh  jndi-jms-ldap-1.21-to-1.22.sh  jolt-custom-class-2.7-to-2.8.sh  listen-http-2.3-to-2.4.sh  listen-syslog-2.6-to-2.7.sh  messaging-platform-1.21-to-1.22.sh  orders-platform-1.27-to-2.0.sh  orders-platform-2.7-to-2.8.sh  reference-remote-resources-1.22-to-1.23.sh
demo/fixtures/: asana-2.7-flow.json  base64-1.27-flow.json  (+16 more)
desktop-app/: README.md
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: commands.rs  lib.rs  main.rs
docs/: cli.md  custom-processors-and-services.md  design.md  desktop-guide.md  release-process.md  rule-pack-format.md  secrets-and-parameters.md  troubleshooting.md
site/: index.html  robots.txt  sitemap.xml  styles.css
(+69 files in other folders)
